--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME="ecommerce-product"
 PORT="9001"
 
-DB_HOST="127.0.0.1"
+DB_HOST="host.docker.internal"
 DB_PORT="5432"
 DB_NAME="ecommerce_products"
 DB_USER="postgres"
 DB_PASSWORD="postgres123"
 
-REDIS_HOST="127.0.0.1:7000"
+REDIS_HOST="host.docker.internal:7000"
 
 KAFKA_HOST=""
 KAFKA_TOPIC=""
 ZOOKEEPER_HOST=""
 
-UMS_HOST="http://localhost:9000"
+UMS_HOST="http://ecommerce-ums:9000"
 UMS_ENDPOINT_PROFILE="/user/v1/profile"
